--- a/pages/home.html
+++ b/pages/home.html
@@ -89,13 +89,57 @@
                 </li>
             </ul>
         </div>
-        <li>
-                    <div class="item" onclick="ferramentaprehistoria()">
+        <ul>
+            <li>
+            <div class="item" onclick="ferramentaprehistoria()">
                         <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120"
                             width="120">
                         <h2>Ferramenta da Pré-História</h2>
                     </div>
                 </li>
+                    <li>
+                        <div class="item" onclick="dominiodofogo()">
+                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                        <h2>Domínio do Fogo pela Civilização Humana</h2>
+                    </div>
+                </li>
+                    <li>
+                        <div class="item" onclick="nauticaedescobrimento()">
+                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                        <h2>Náutica e Descobrimentos</h2>
+                    </div>
+                </li>
+            </ul>
+                <ul>
+                <li>
+                        <div class="item" onclick="revolucaocientifica()">
+                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                        <h2>Revolução Científica e Instrumentos</h2>
+                    </div>
+                </li>
+                 <li>
+                        <div class="item" onclick="revolucaoindustrial()">
+                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                        <h2>Revolução Industrial (Século XVIII)</h2>
+                    </div>
+                </li>
+                <li>
+                        <div class="item" onclick="locomotivaferroviaria()">
+                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                        <h2>Locomotiva a Vapor e Expansão Ferroviária</h2>
+                    </div>
+                </li>
+                </ul>
+                <ul>
+                 <li>
+                        <div class="item" onclick="maquinadecostura()">
+                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                        <h2>Invenção da Máquina de Costura</h2>
+                    </div>
+                </li>
+                </ul>
+            </ul>
+        </div>
             </ul>
         </div>
 
