--- a/pages/pagina10.html
+++ b/pages/pagina10.html
@@ -12,29 +12,27 @@
     <header>
         <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>3-A Invenção da Roda (c. 3500 a.C.)</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
+            <h2>3-A Invenção da Roda: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>A invenção da roda, por volta de 3500 a.C., é amplamente considerada um dos marcos mais importantes e transformadores na história da humanidade. Embora tenha sido atribuída principalmente às culturas da Mesopotâmia, especialmente à região da Suméria, sua invenção e utilização rapidamente se espalharam por outras partes do mundo antigo, levando a uma revolução nos métodos de transporte, na agricultura e na engenharia.
 
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
+Antes da invenção da roda, as sociedades antigas dependiam de métodos mais simples e rudimentares para o transporte de pessoas e mercadorias. Isso incluía o uso de trenós, que eram carregados sobre a terra ou neve, bem como o esforço físico de homens e animais para carregar objetos pesados. A introdução da roda transformou completamente esse cenário, permitindo o desenvolvimento de veículos de tração animal mais eficientes e adaptáveis, como os carros de bois e carruagens.
+<br>
+As primeiras rodas eram geralmente feitas de discos de madeira sólidos, que eram fixados a eixos e usados para girar e movimentar as cargas. Esses primeiros exemplos de rodas podem ser observados em várias descobertas arqueológicas importantes, como o "Padrão de Ur", um artefato que ilustra um carro de guerra, e em sítios da cultura de Tripília, na região da atual Ucrânia. Esses achados fornecem evidências de que a tecnologia da roda foi rapidamente adotada e aperfeiçoada, demonstrando seu impacto nas sociedades da época.
+<br>
+Com a invenção da roda, não apenas o transporte de mercadorias e pessoas foi facilitado, mas também surgiram novas inovações que mudaram a dinâmica social e econômica. A roda foi um elemento essencial no desenvolvimento de moinhos para moer grãos e outros produtos agrícolas, assim como nos sistemas de irrigação que permitiram o cultivo de grandes áreas de terra em regiões áridas. A eficiência proporcionada pela roda contribuiu significativamente para o aumento da produção e para a melhoria da qualidade de vida das civilizações antigas.
+<br>
+Além disso, a introdução da roda não se limitou ao transporte de mercadorias; ela foi fundamental para o progresso nas áreas de engenharia e arquitetura. Mecanismos movidos a roda, como os catapultas e outros dispositivos militares, passaram a ser empregados, e os primeiros veículos de guerra, como os carros de combate, também foram desenvolvidos. A roda permitiu, assim, avanços significativos nas capacidades militares, ajudando na formação de impérios e na expansão territorial.
+<br>
+A importância da roda na história das civilizações é inegável. Sua simplicidade e eficiência a tornaram um dos pilares das tecnologias humanas. Ao longo dos milênios, a roda continuou a ser refinada, influenciando o desenvolvimento de veículos e máquinas em diferentes culturas e períodos históricos, e seu impacto persiste até hoje, seja em transportes modernos, como carros e bicicletas, ou em tecnologias industriais e científicas.
+<br>
+
+Em resumo, a invenção da roda é um exemplo claro de como uma inovação aparentemente simples pode ter consequências profundas e duradouras para o progresso humano. Sua contribuição para a sociedade antiga e seu impacto contínuo na tecnologia moderna são um testemunho de sua importância histórica e atemporal.
             </p>
-            <li>Início da Internet
-
-            </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
 
         </div>
         <div>
