--- a/pages/pagina11.html
+++ b/pages/pagina11.html
@@ -12,30 +12,40 @@
     <header>
         <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>Náutica e Descobrimentos: Caravelas e Mapas Náuticos (Século XV)</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
+            <h2>Náutica e Descobrimentos: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>No século XV, a Europa vivenciou uma revolução náutica que impulsionou a Era dos Descobrimentos, liderada principalmente por Portugal e Espanha. Esse 
+                período marcou avanços significativos na construção naval, com destaque para as caravelas, e no desenvolvimento de mapas náuticos, fundamentais para a 
+                exploração de novos territórios e rotas marítimas. </p>
+            <li>Mapas náuticos:
 
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
-            </p>
-            <li>Início da Internet
-
+Os mapas náuticos, ou cartas-portulano, foram outro pilar essencial dos descobrimentos. Diferentemente dos mapas medievais, que muitas vezes eram simbólicos, as 
+cartas-portulano do século XV eram detalhadas e baseadas em observações empíricas. Elas representavam com precisão as linhas costeiras, portos e rotas marítimas, 
+utilizando uma rede de linhas de rumo (ou rhumb lines) que auxiliavam os navegadores a traçar cursos com base na bússola.
+Esses mapas eram frequentemente produzidos por cartógrafos portugueses e italianos, com destaque para a Escola de Sagres, associada ao Infante D. Henrique, o Navegador.
+As cartas-portulano incorporavam informações de expedições anteriores, como as viagens ao longo da costa africana, e eram constantemente atualizadas com novos dados, permitindo a exploração de regiões como as Américas e o Índico.
             </li>
-            <li>Expansão da internet para o público geral.
-
+            <br/>
+            <li>As caravelas:
+As caravelas foram embarcações revolucionárias que se tornaram símbolos da expansão marítima europeia. Desenvolvidas principalmente em Portugal, essas embarcações eram 
+<br>
+leves, ágeis e versáteis, ideais para longas viagens oceânicas. Com cascos estreitos e um sistema de velas que combinava velas latinas (triangulares) e velas quadradas, 
+<br>
+as caravelas permitiam navegar tanto com ventos favoráveis quanto contra ventos adversos, uma vantagem crucial em mares desconhecidos.
             </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
+            <br/>
+            <li>impactos
+A combinação de caravelas e mapas náuticos possibilitou feitos históricos, como a circum-navegação do Cabo da Boa Esperança (1488) e a chegada de Cristóvão Colombo às 
+Américas (1492). Esses avanços não apenas expandiram o conhecimento geográfico, mas também transformaram as relações comerciais, culturais e políticas, inaugurando a era 
+da globalização.
+<br>
+Em resumo, as inovações náuticas do século XV, lideradas pelas caravelas e pelos mapas náuticos, foram fundamentais para os Descobrimentos, permitindo que a humanidade 
+cruzasse fronteiras até então inimagináveis e moldasse o mundo moderno.
             </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
-
         </div>
         <div>
             <!--volta para a pagina inicial-->
