--- a/pages/pagina13.html
+++ b/pages/pagina13.html
@@ -12,30 +12,34 @@
     <header>
         <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>Revolução Industrial (século XVIII):</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
-
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
+            <h2>Revolução Industrial Máquinas a Vapor e Fábricas: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>A Revolução Industrial, iniciada no século XVIII na Inglaterra, marcou uma transformação profunda na economia, sociedade e tecnologia. A introdução das 
+                máquinas a vapor e o surgimento das fábricas foram elementos centrais desse processo, que revolucionou a produção e alterou o modo de vida da humanidade.
             </p>
-            <li>Início da Internet
-
+            <li>Máquinas a Vapor <br>
+A máquina a vapor, aperfeiçoada por James Watt na década de 1760, foi o coração da Revolução Industrial. Movida a carvão, ela convertia energia térmica em energia 
+mecânica, permitindo a mecanização de tarefas antes realizadas manualmente ou com tração animal. Sua aplicação em indústrias têxteis, mineração e transporte (como 
+locomotivas e navios a vapor) aumentou a eficiência e a escala de produção. A máquina a vapor viabilizou a substituição do trabalho humano por processos automáticos, 
+reduzindo custos e acelerando a manufatura.
             </li>
-            <li>Expansão da internet para o público geral.
-
+            <br/>
+            <li>Fábricas <br/>
+O advento das fábricas redefiniu a organização do trabalho. Antes da Revolução Industrial, a produção era predominantemente artesanal, realizada em pequenas oficinas ou 
+residências. Com as máquinas a vapor, surgiram grandes instalações fabris, centralizando a produção em um único local. As fábricas têxteis, especialmente as de algodão, 
+foram pioneiras, utilizando teares mecânicos movidos a vapor. Esse modelo permitiu a produção em massa, mas também trouxe condições de trabalho desafiadoras, com longas 
+jornadas, ambientes insalubres e exploração de mão de obra, incluindo mulheres e crianças.
             </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
+            <br/>
+            <li>Impactos <br/>
+A combinação de máquinas a vapor e fábricas impulsionou a urbanização, com trabalhadores migrando para cidades em busca de empregos. Isso gerou crescimento populacional, 
+mas também problemas como superlotação e más condições de vida. Economicamente, a Revolução Industrial consolidou o capitalismo industrial, com o aumento da produção de 
+bens e a expansão do comércio global. Socialmente, ela plantou as sementes para movimentos trabalhistas, que buscavam melhores condições de trabalho.
             </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
-
         </div>
         <div>
             <!--volta para a pagina inicial-->
