--- a/pages/pagina14.html
+++ b/pages/pagina14.html
@@ -12,29 +12,44 @@
     <header>
         <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>Locomotiva a Vapor e Expansão Ferroviária</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
-
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
+            <h2>Locomotiva a Vapor e Expansão Ferroviária: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>A invenção da locomotiva a vapor no século XIX foi um marco fundamental no processo de revolução industrial e no desenvolvimento de infraestruturas de 
+                transporte ao redor do mundo. Sua invenção está diretamente associada ao engenheiro britânico George Stephenson, que, em 1814, criou uma das primeiras 
+                locomotivas a vapor utilizáveis comercialmente, chamada Locomotion. No entanto, foi em 1825, com a inauguração da primeira ferrovia pública de passageiros 
+                e cargas, a Stockton and Darlington Railway, que as locomotivas a vapor começaram a revolucionar o transporte.
             </p>
-            <li>Início da Internet
-
-            </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
+            <ul>A locomotiva a vapor utilizava a força do vapor gerado pela queima de carvão para movimentar um pistão, que, por sua vez, impulsionava as rodas da máquina. Essa 
+                inovação permitiu uma mudança radical na forma como as pessoas e mercadorias eram transportadas. Antes da ferrovia, o transporte dependia de carros puxados por 
+                animais ou de barcos, métodos que eram lentos e limitados pelas condições geográficas. A locomotiva a vapor, ao contrário, proporcionava uma velocidade muito 
+                maior, maior capacidade de carga e autonomia, além de abrir novas possibilidades para a expansão de mercados e a integração de regiões distantes.
+            </ul>
+            <br/>
+            <ul>O impacto da locomotiva a vapor na expansão ferroviária foi profundo. À medida que as ferrovias começaram a se espalhar pelo Reino Unido e, mais tarde, 
+                pelo resto do mundo, novos centros industriais surgiram em regiões que anteriormente eram de difícil acesso. A construção de linhas férreas impulsionou a 
+                extração de recursos naturais, como carvão e ferro, e promoveu um crescimento econômico acelerado. As ferrovias também foram fundamentais para a 
+                urbanização, já que facilitavam o transporte de pessoas, alimentos e bens, contribuindo para a formação de grandes cidades industriais.
+            </ul>
+            <br/>
+            <ul>No Brasil, por exemplo, a chegada da locomotiva a vapor foi um dos maiores impulsionadores do desenvolvimento econômico no século XIX. A primeira ferrovia 
+                brasileira, a Estrada de Ferro do Rio de Janeiro, foi inaugurada em 1854, ligando o Rio de Janeiro à cidade de Petrópolis. O país viu, então, a expansão 
+                das ferrovias por todo o território, conectando regiões produtoras de café e outras commodities aos portos, impulsionando o comércio e a indústria. A 
+                ferrovia também desempenhou um papel crucial na integração territorial do Brasil, conectando o litoral aos interiores remotos e facilitando o fluxo de 
+                imigrantes e mercadorias.
+            </ul>
+            <br/>
+            <ul>A construção de ferrovias não foi, porém, uma tarefa simples. Exigiu investimentos pesados, planejamento de grandes obras de engenharia e a superação de 
+                desafios naturais, como montanhas, rios e grandes distâncias. No entanto, os benefícios que as locomotivas a vapor e as ferrovias trouxeram foram 
+                incalculáveis, com um impacto profundo não só na economia, mas também na sociedade, na cultura e na organização territorial dos países.
+        <br/>
+Com o tempo, a locomotiva a vapor foi substituída por novos meios de transporte, como o trem elétrico e o diesel, mas o legado dessa inovação perdura até hoje. As 
+ferrovias continuam a ser uma das formas mais eficientes de transporte de carga e passageiros em muitos países, e a locomotiva a vapor, com sua beleza e história, 
+permanece como símbolo de uma era de grandes transformações tecnológicas e sociais.
+ </ul>
 
         </div>
         <div>
