--- a/pages/pagina15.html
+++ b/pages/pagina15.html
@@ -12,29 +12,43 @@
     <header>
         <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>Invenção da Máquina de Costura (década de 1840)</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
-
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
+            <h2>Invenção da Máquina de Costura: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>A invenção da máquina de costura, na década de 1840, foi um marco significativo na história da indústria têxtil e no desenvolvimento das técnicas de 
+                fabricação de roupas. Antes desse invento, o processo de costura era totalmente manual, exigindo horas de trabalho árduo e habilidades especializadas. 
+                Esse cenário, no entanto, começou a mudar com as inovações tecnológicas de uma série de inventores que procuravam otimizar a produção de vestuário e 
+                outros itens de tecido.
             </p>
-            <li>Início da Internet
+            <ul>A primeira máquina de costura funcional foi desenvolvida por Elias Howe, um inventor norte-americano, em 1846. Sua invenção consistia em uma máquina que 
+                usava uma agulha com o buraco na ponta para criar pontos contínuos, algo inovador para a época. O modelo de Howe, no entanto, ainda enfrentava alguns 
+                problemas práticos, e sua patente foi alvo de disputas legais com outros inventores.
+            </ul>
+            <br/>
+            <ul>Pouco tempo depois, Isaac Singer, também norte-americano, fez melhorias substanciais na máquina de costura de Howe, tornando-a mais eficiente e prática 
+                para o uso doméstico e industrial. Singer introduziu uma série de melhorias no design, incluindo a utilização de uma base mais estável e um sistema de 
+                pedal, o que permitia que o operador controlasse o movimento da máquina com os pés enquanto as mãos se concentravam na costura. Em 1851, Singer patentou 
+                sua versão aprimorada da máquina, que logo se tornaria a mais popular e amplamente utilizada.
+            </ul>
+            <br/>
+            <ul>Além das melhorias no design, a máquina de costura de Singer se destacou pelo modelo de negócios inovador: em vez de vender as máquinas a um preço elevado, 
+                ele começou a oferecê-las em parcelas acessíveis. Isso permitiu que uma quantidade maior de pessoas adquirisse suas máquinas, impulsionando a adoção massiva 
+                do novo equipamento, tanto nas casas quanto nas fábricas.
+            </ul>
+            <br/>
+            <ul>A invenção da máquina de costura não só revolucionou o trabalho doméstico, mas também teve um enorme impacto na indústria têxtil e na produção de roupas 
+                em grande escala. A máquina de costura reduziu o tempo necessário para fabricar vestuário e outros artigos de tecido, o que levou à produção em massa e a 
+                uma queda nos preços. Isso possibilitou que as roupas se tornassem mais acessíveis, democratizando o acesso a vestuário de qualidade e impulsionando a 
+                Revolução Industrial, ao gerar uma grande demanda por tecidos e produtos manufaturados.
+            </ul>
+            <ul>A invenção da máquina de costura também teve um efeito transformador na vida das mulheres. Muitos dos primeiros fabricantes de máquinas de costura 
+                contratavam mulheres para operá-las, o que proporcionou novas oportunidades de trabalho, além de um aumento na renda familiar. Esse fenômeno teve um papel 
+                relevante na emancipação feminina, uma vez que o emprego nas fábricas e ateliês de costura oferecia maior autonomia econômica.
+            </ul>
 
-            </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
 
         </div>
         <div>
