--- a/pages/pagina9.html
+++ b/pages/pagina9.html
@@ -12,29 +12,60 @@
     <header>
         <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>Domínio do Fogo pelos Humanos Primitivos</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
-
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
+            <h2>Domínio do Fogo pelos Humanos: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>O domínio do fogo representa um dos marcos mais significativos na história da humanidade, marcando um ponto de inflexão no desenvolvimento cultural, 
+                tecnológico e social dos hominídeos. A capacidade de produzir e controlar o fogo proporcionou proteção contra predadores, conforto em ambientes frios, 
+                aquecimento e preparo de alimentos, além de abrir novas possibilidades para a inovação e a interação social. Esse avanço permitiu não apenas a 
+                sobrevivência em condições adversas, mas também o florescimento de ideias que moldaram o progresso humano ao longo de milênios.
             </p>
-            <li>Início da Internet
+            <br/>
+            <li>Origens do Controle do Fogo
+Evidências arqueológicas sugerem que o uso do fogo pelos hominídeos começou há pelo menos 1,5 milhão de anos, com o Homo erectus sendo uma das primeiras espécies a demonstrar controle sobre ele. Sítios arqueológicos, como os encontrados em Wonderwerk Cave, na África do Sul, e em Gesher Benot Ya’aqov, em Israel, revelam vestígios de fogueiras datadas de 1 milhão a 790 mil anos atrás. Inicialmente, os hominídeos provavelmente aproveitavam fogos naturais causados por raios ou erupções vulcânicas, aprendendo a mantê-los acesos antes de desenvolverem técnicas para produzi-lo.
+
+A produção intencional de fogo, um avanço mais complexo, envolveu o domínio de técnicas como a fricção de madeira 
+(esfregando dois pedaços de madeira para gerar calor e faíscas) e a percussão de pedras (batendo sílex contra pirita para criar faíscas). Essas técnicas exigiam não 
+apenas habilidade manual, mas também um entendimento profundo dos materiais e do ambiente, evidenciando um salto cognitivo significativo. Sítios como Qesem Cave, em 
+Israel, datados de cerca de 400 mil anos atrás, mostram evidências claras de fogueiras controladas, com ossos queimados e cinzas, sugerindo que o Homo erectus e, mais 
+tarde, o Homo heidelbergensis e o Homo neanderthalensis, dominavam o uso regular do fogo.
 
             </li>
-            <li>Expansão da internet para o público geral.
-
+            <br/>
+            <li>Benefícios do Fogo para os Hominídeos
+O controle do fogo trouxe benefícios multifacetados que transformaram a vida dos humanos primitivos:
+<br>
+Proteção: O fogo era uma barreira eficaz contra predadores, permitindo que os hominídeos se estabelecessem em áreas mais seguras e repousassem com maior tranquilidade durante a noite.
+<br>
+Aquecimento: Em climas frios, o fogo proporcionava calor, possibilitando a sobrevivência em regiões antes inóspitas, como durante as glaciações do Pleistoceno.
+<br>
+Cozimento de Alimentos: O cozimento tornou os alimentos mais fáceis de digerir, aumentando a absorção de nutrientes. Isso contribuiu para o desenvolvimento físico, incluindo o aumento do tamanho do cérebro, já que alimentos cozidos exigiam menos energia para a digestão. Além disso, o fogo permitiu a conservação de alimentos por meio do defumado, prolongando sua durabilidade.
+<br>
+Iluminação: O fogo estendeu o período de atividade para além do dia, permitindo que os hominídeos trabalhassem ou socializassem à noite.
+<br>
+Transformação de Materiais: O fogo foi usado para endurecer pontas de lanças de madeira, modelar ferramentas e, mais tarde, fundir metais, pavimentando o caminho para avanços tecnológicos.
             </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
+            <br/>
+            <li>Impactos Sociais e Culturais
+Além dos benefícios práticos, o fogo desempenhou um papel crucial no desenvolvimento social e cultural. As fogueiras serviam como pontos de encontro, onde os 
+hominídeos se reuniam para compartilhar alimentos, contar histórias e fortalecer laços sociais. Esse ambiente favoreceu a comunicação e a transmissão de conhecimento, 
+contribuindo para o desenvolvimento da linguagem e da cultura. A necessidade de manter o fogo aceso também incentivou a cooperação e a divisão de tarefas, reforçando 
+estruturas sociais mais complexas.
+O fogo também teve implicações simbólicas. Em muitas culturas primitivas, ele era associado a rituais e cerimônias, simbolizando vida, poder e transformação. A capacidade 
+de controlá-lo diferenciava os humanos de outras espécies, reforçando a percepção de domínio sobre a natureza.
+             </li>
+<br/>
+             <li>Avanço Tecnológico e Cultural
+O domínio do fogo foi um catalisador para inovações tecnológicas e culturais. Ele permitiu a ocupação de novos territórios, a diversificação da dieta e o 
+desenvolvimento de ferramentas mais sofisticadas. No Paleolítico Superior, o fogo era usado para criar lâmpadas de pedra alimentadas por gordura animal, evidenciando um 
+nível avançado de planejamento e criatividade. No Neolítico, o uso do fogo evoluiu para a cerâmica e, posteriormente, para a metalurgia, marcando o início de novas eras 
+tecnológicas.
+Em resumo, o domínio do fogo pelos humanos primitivos, especialmente pelo Homo erectus e espécies posteriores, foi um divisor de águas na história da humanidade. Ele não 
+apenas garantiu a sobrevivência em ambientes desafiadores, mas também abriu portas para avanços tecnológicos, sociais e culturais que moldaram o curso da evolução humana. 
+O fogo, em sua essência, foi uma ferramenta de transformação, iluminando o caminho para o desenvolvimento das sociedades modernas.</li>
 
         </div>
         <div>
