--- a/pages/pagina12.html
+++ b/pages/pagina12.html
@@ -12,29 +12,27 @@
     <header>
         <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>Revolução Científica e Instrumentos (telescópio, microscópio):</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
+            <h2>Revolução Científica e Instrumentos: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>A Revolução Científica, que se desenrolou principalmente nos séculos XVI e XVII, marcou uma transformação profunda no modo como a humanidade compreendia o 
+                universo e a natureza. Esse período, caracterizado pelo avanço do método científico e pela valorização da observação empírica, foi impulsionado pelo 
+                desenvolvimento de novos instrumentos, como o telescópio e o microscópio, que expandiram os limites do conhecimento humano.
+                </p>
 
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
-            </p>
-            <li>Início da Internet
+            <ul>O telescópio, atribuído a Hans Lippershey em 1608 e aprimorado por Galileu Galilei, revolucionou a astronomia. Galileu utilizou o instrumento para observar 
+                corpos celestes, como as luas de Júpiter, as fases de Vênus e as manchas solares, fornecendo evidências que corroboravam o modelo heliocêntrico de 
+                Copérnico. Essas observações desafiaram a visão geocêntrica predominante e abriram caminho para uma nova compreensão do cosmos.
 
-            </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
+            </ul>
+            <br>
+            <ul>Já o microscópio, desenvolvido por volta do final do século XVI por Zacharias Janssen e posteriormente refinado por Antonie van Leeuwenhoek, permitiu a 
+                exploração do mundo invisível. Leeuwenhoek, com seus microscópios de lente única, observou micro-organismos, glóbulos vermelhos e até espermatozoides, 
+                lançando as bases para a microbiologia e transformando a compreensão da vida em escala microscópica.
+            </ul>
 
         </div>
         <div>
